fix(popup):Overflow fix

--- a/public/modules/css/pop-up.css
+++ b/public/modules/css/pop-up.css
@@ -5,7 +5,6 @@
     right: 50%;
     top:50%;
     bottom:50%;
-    transform: translate(50% -50%);
     justify-self: center;
     display: none;
     z-index: 100000000000000000000;
@@ -16,6 +15,9 @@
     transition: all 0.4s ease-in-out;
     box-shadow: var(--lios-pop-up-shadow, 0 2px 4px rgba(0, 0, 0, 0.1));
     flex-direction: column;
+    max-height: 90vh;
+    overflow-y: auto;
+    box-sizing: content-box;
 }
 .lios-pop-up.pop-up-is-opening{
     animation: LiOS-Open-Popup-Open 0.1s linear 1 forwards;
